# lette

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md
config/: base.toml
migrations/: 20240317083123_create_tables.down.sql  20240317083123_create_tables.up.sql
src/: app.rs  conf.rs  lib.rs  log.rs  main.rs
src/cmd/: create_admin.rs  hello.rs  migrate.rs  mod.rs  serve.rs
src/entity/: article.rs  category.rs  friend.rs  mod.rs  notice.rs  series.rs  tag.rs  user.rs
src/repository/: mod.rs  user.rs
src/utils/: hash.rs
