[package]
name = "lette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "lette"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"