[package]
name = "lette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "lette"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono"] }
chrono = { version = "0.4.35", features = ["serde"] }

argon2 = "0.5"
base64 = "0.22"

clap = { version = "4.5", features = ["derive"] }
config = "0.14"
anyhow = "1.0"

serde = "1.0"
serde_json = "1.0"
secrecy = { version = "0.8", features = ["serde"] }

dotenvy = "0.15"

tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
